# IndustrialCPPLab2

./: README.md  splitter.hpp
HW22/HW22/MapReduce/: CMakeLists.txt
HW22/HW22/MapReduce/data/input/: file0.txt  file1.txt  file2.txt  file3.txt  file4.txt
HW22/HW22/MapReduce/include/: CMakeLists.txt
HW22/HW22/MapReduce/include/mapreduce/: job.hpp  map.hpp  multithread_vector.hpp  reduce.hpp  shuffler.hpp  splitter.hpp  storage.hpp
HW22/HW22/MapReduce/projects/src/: CMakeLists.txt  main.cpp
HW22/HW22/MapReduce/testsuite/: CMakeLists.txt  integrate.py
HW22/HW22/MapReduce/testsuite/libsrc/: CMakeLists.txt
HW22/HW22/MapReduce/testsuite/libsrc/wordcount/src/: test.cpp
HW22/MapReduce/: CMakeLists.txt
HW22/MapReduce/include/mapreduce/: storage.hpp
